preference GUI rework